librocksdb-sys/src/lib.rs


    pub fn rocksdb_cuckoo_options_set_hash_ratio(options: *mut rocksdb_cuckoo_table_options_t,
                                                 v: f64);

    pub fn rocksdb_cuckoo_options_set_max_search_depth(options: *mut rocksdb_cuckoo_table_options_t,
                                                       v: uint32_t);

    pub fn rocksdb_cuckoo_options_set_cuckoo_block_size(options: *mut rocksdb_cuckoo_table_options_t, v: uint32_t);

    pub fn rocksdb_cuckoo_options_set_identity_as_first_hash(options: *mut rocksdb_cuckoo_table_options_t, v: c_uchar);

    pub fn rocksdb_cuckoo_options_set_use_module_hash(options: *mut rocksdb_cuckoo_table_options_t,
                                                      v: c_uchar);

    pub fn rocksdb_options_set_cuckoo_table_factory(opt: *mut rocksdb_options_t, table_options: *mut rocksdb_cuckoo_table_options_t);

    // Options

    pub fn rocksdb_options_create() -> *mut rocksdb_options_t;

    pub fn rocksdb_options_destroy(opt: *mut rocksdb_options_t);

    pub fn rocksdb_options_increase_parallelism(opt: *mut rocksdb_options_t,
                                                total_threads: c_int);

    pub fn rocksdb_options_optimize_for_point_lookup(opt: *mut rocksdb_options_t,
                                                     block_cache_size_mb: uint64_t);

    pub fn rocksdb_options_optimize_level_style_compaction(opt: *mut rocksdb_options_t,
                                                           memtable_memory_budget: uint64_t);

    pub fn rocksdb_options_optimize_universal_style_compaction(opt: *mut rocksdb_options_t,
                                                               memtable_memory_budget: uint64_t);

    pub fn rocksdb_options_set_compaction_filter(opt: *mut rocksdb_options_t,
                                                 filter: *mut rocksdb_compactionfilter_t);

    pub fn rocksdb_options_set_compaction_filter_factory(opt: *mut rocksdb_options_t, factory: *mut rocksdb_compactionfilterfactory_t);

    pub fn rocksdb_options_compaction_readahead_size(opt: *mut rocksdb_options_t, s: size_t);

    pub fn rocksdb_options_set_comparator(opt: *mut rocksdb_options_t,
                                          cmp: *mut rocksdb_comparator_t);

    pub fn rocksdb_options_set_merge_operator(opt: *mut rocksdb_options_t,
                                              merge_operator: *mut rocksdb_mergeoperator_t);

    pub fn rocksdb_options_set_uint64add_merge_operator(opt: *mut rocksdb_options_t);

    pub fn rocksdb_options_set_compression_per_level(opt: *mut rocksdb_options_t,
                                                     level_values: *const c_int,
                                                     num_levels: size_t);

    pub fn rocksdb_options_set_create_if_missing(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_create_missing_column_families(opt: *mut rocksdb_options_t,
                                                              v: c_uchar);

    pub fn rocksdb_options_set_error_if_exists(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_paranoid_checks(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_env(opt: *mut rocksdb_options_t, env: *mut rocksdb_env_t);

    pub fn rocksdb_options_set_info_log(opt: *mut rocksdb_options_t, l: *mut rocksdb_logger_t);

    pub fn rocksdb_options_set_info_log_level(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_write_buffer_size(opt: *mut rocksdb_options_t, s: size_t);

    pub fn rocksdb_options_set_db_write_buffer_size(opt: *mut rocksdb_options_t, s: size_t);

    pub fn rocksdb_options_set_max_open_files(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_max_total_wal_size(opt: *mut rocksdb_options_t, n: uint64_t);

    pub fn rocksdb_options_set_compression_options(opt: *mut rocksdb_options_t,
                                                   w_bits: c_int,
                                                   level: c_int,
                                                   strategy: c_int,
                                                   max_dict_bytes: c_int);

    pub fn rocksdb_options_set_prefix_extractor(opt: *mut rocksdb_options_t,
                                                prefix_extractor: *mut rocksdb_slicetransform_t);

    pub fn rocksdb_options_set_num_levels(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_level0_file_num_compaction_trigger(opt: *mut rocksdb_options_t,
                                                                  n: c_int);

    pub fn rocksdb_options_set_level0_slowdown_writes_trigger(opt: *mut rocksdb_options_t,
                                                              n: c_int);

    pub fn rocksdb_options_set_level0_stop_writes_trigger(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_max_mem_compaction_level(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_target_file_size_base(opt: *mut rocksdb_options_t, n: uint64_t);

    pub fn rocksdb_options_set_target_file_size_multiplier(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_max_bytes_for_level_base(opt: *mut rocksdb_options_t, n: uint64_t);

    pub fn rocksdb_options_set_max_bytes_for_level_multiplier(opt: *mut rocksdb_options_t,
                                                              n: c_int);

    pub fn rocksdb_options_set_expanded_compaction_factor(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_max_grandparent_overlap_factor(opt: *mut rocksdb_options_t,
                                                              v: c_int);

    pub fn rocksdb_options_set_max_bytes_for_level_multiplier_additional(opt: *mut rocksdb_options_t, level_values: *mut c_int, num_levels: size_t);

    pub fn rocksdb_options_enable_statistics(opt: *mut rocksdb_options_t);

    pub fn rocksdb_options_statistics_get_string(opt: *mut rocksdb_options_t) -> *mut c_char;

    pub fn rocksdb_options_set_max_write_buffer_number(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_min_write_buffer_number_to_merge(opt: *mut rocksdb_options_t,
                                                                n: c_int);

    pub fn rocksdb_options_set_max_write_buffer_number_to_maintain(opt: *mut rocksdb_options_t,
                                                                   n: c_int);

    pub fn rocksdb_options_set_max_background_compactions(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_max_background_flushes(opt: *mut rocksdb_options_t, n: c_int);

    pub fn rocksdb_options_set_max_log_file_size(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_log_file_time_to_roll(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_keep_log_file_num(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_recycle_log_file_num(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_soft_rate_limit(opt: *mut rocksdb_options_t, v: f64);

    pub fn rocksdb_options_set_hard_rate_limit(opt: *mut rocksdb_options_t, v: f64);

    pub fn rocksdb_options_set_rate_limit_delay_max_milliseconds(opt: *mut rocksdb_options_t,
                                                                 v: c_uint);

    pub fn rocksdb_options_set_max_manifest_file_size(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_table_cache_numshardbits(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_table_cache_remove_scan_count_limit(opt: *mut rocksdb_options_t,
                                                                   v: c_int);

    pub fn rocksdb_options_set_arena_block_size(opt: *mut rocksdb_options_t, v: size_t);

    pub fn rocksdb_options_set_use_fsync(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_db_log_dir(opt: *mut rocksdb_options_t, v: *const c_char);

    pub fn rocksdb_options_set_wal_dir(opt: *mut rocksdb_options_t, v: *const c_char);

    pub fn rocksdb_options_set_WAL_ttl_seconds(opt: *mut rocksdb_options_t, ttl: uint64_t);

    pub fn rocksdb_options_set_WAL_size_limit_MB(opt: *mut rocksdb_options_t, limit: uint64_t);

    pub fn rocksdb_options_set_manifest_preallocation_size(opt: *mut rocksdb_options_t,
                                                           v: size_t);

    pub fn rocksdb_options_set_purge_redundant_kvs_while_flush(opt: *mut rocksdb_options_t,
                                                               v: c_uchar);

    pub fn rocksdb_options_set_use_direct_reads(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_use_direct_io_for_flush_and_compaction(opt: *mut rocksdb_options_t,
                                                                      v: c_uchar);

    pub fn rocksdb_options_set_allow_mmap_reads(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_allow_mmap_writes(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_is_fd_close_on_exec(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_skip_log_error_on_recovery(opt: *mut rocksdb_options_t,
                                                          v: c_uchar);

    pub fn rocksdb_options_set_stats_dump_period_sec(opt: *mut rocksdb_options_t, v: c_uint);

    pub fn rocksdb_options_set_advise_random_on_open(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_access_hint_on_compaction_start(opt: *mut rocksdb_options_t,
                                                               v: c_int);

    pub fn rocksdb_options_set_use_adaptive_mutex(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_bytes_per_sync(opt: *mut rocksdb_options_t, v: uint64_t);

    pub fn rocksdb_options_set_allow_concurrent_memtable_write(opt: *mut rocksdb_options_t,
                                                               v: c_uchar);

    pub fn rocksdb_options_set_verify_checksums_in_compaction(opt: *mut rocksdb_options_t,
                                                              v: c_uchar);

    pub fn rocksdb_options_set_filter_deletes(opt: *mut rocksdb_options_t, v: c_uchar);

    pub fn rocksdb_options_set_max_sequential_skip_in_iterations(opt: *mut rocksdb_options_t,
                                                                 v: uint64_t);

    pub fn rocksdb_options_set_disable_auto_compactions(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_set_delete_obsolete_files_period_micros(opt: *mut rocksdb_options_t,
                                                                   v: uint64_t);

    pub fn rocksdb_options_set_source_compaction_factor(opt: *mut rocksdb_options_t, v: c_int);

    pub fn rocksdb_options_prepare_for_bulk_load(opt: *mut rocksdb_options_t);

    pub fn rocksdb_options_set_memtable_vector_rep(opt: *mut rocksdb_options_t);

    pub fn rocksdb_options_set_hash_skip_list_rep(opt: *mut rocksdb_options_t,
                                                  bucket_count: size_t,
                                                  skiplist_height: int32_t,
                                                  skiplist_branching_factor: int32_t);

    pub fn rocksdb_options_set_hash_link_list_rep(opt: *mut rocksdb_options_t,
                                                  bucket_count: size_t);

    pub fn rocksdb_options_set_plain_table_factory(opt: *mut rocksdb_options_t,
                                                   user_key_len: uint32_t,
                                                   bloom_bits_per_key: c_int,
                                                   hash_table_ratio: f64,
                                                   index_sparseness: size_t);

    pub fn rocksdb_options_set_min_level_to_compress(opt: *mut rocksdb_options_t, level: c_int);
